--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </header>
   <main class="home">
   <video autoplay muted loop>
-    <source src="yourVideo.mp4" type="video/mp4">
+    <source src="ocean_waves.mp4" type="video/mp4">
     Votre navigateur ne supporte pas l'élément video.
   </video>
     </main>
