--- a/stockholm.html
+++ b/stockholm.html
@@ -6,6 +6,22 @@
   <title><a href="https://bertrand9999.github.io/Challenges">Explorer l'inconnu : voyages, rencontres, aventures</a></title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+   <!-- Firebase -->
+   <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
+   <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-firestore.js"></script>
+   <script>
+      const firebaseConfig = {
+      apiKey: "AIzaSyBhb-gYuXWKOnCuN_z4FEt17SkW_nOPqao",
+      authDomain: "challenge-c426a.firebaseapp.com",
+      projectId: "challenge-c426a",
+      storageBucket: "challenge-c426a.appspot.com",
+      messagingSenderId: "428726302902",
+      appId: "1:428726302902:web:772e20c8915a593c2c0e17"
+    };
+     // Initialize Firebase
+    const app = firebase.initializeApp(firebaseConfig);
+  </script>
+  <script src="depenses.js"></script>
 </head>
 <body>
 <header>
