--- a/stockholm.html
+++ b/stockholm.html
@@ -127,20 +127,17 @@
 </main>
   
 <div class="sidebar">
-  <h2>Compteur de dépenses</h2>
-  <p>Somme initiale : <span id="initialAmount">400</span> €</p>
-<p>Somme restante : <span id="remainingAmount">400</span> €</p>
+    <h2>Compteur de dépenses</h2>
+    <p>Somme initiale : <span id="initialAmount">400</span> €</p>
+    <p>Somme restante : <span id="remainingAmount">400</span> €</p>
 
-  <h3>Ajouter un élément</h3>
-  <input type="text" id="itemName" placeholder="Nom de l'élément">
-  <input type="number" id="itemPrice" placeholder="Prix">
-  <button id="addItemButton">Ajouter</button>
-  <h3>Panier</h3>
-  <ul id="itemList"></ul>
- <button id="validateExpensesButton">Valider les dépenses</button>
-  <script src="depenses.js"></script>
-    <h3>Dépenses validées</h3>
-<ul id="validatedExpensesList"></ul>
+    <h3>Ajouter un élément</h3>
+    <input type="text" id="itemName" placeholder="Nom de l'élément">
+    <input type="number" id="itemPrice" placeholder="Prix">
+    <button id="addItemButton">Ajouter</button>
+
+    <h3>Dépenses</h3>
+    <ul id="itemList"></ul>
   </div>
 
   <footer>
