--- a/lisbonne.html
+++ b/lisbonne.html
@@ -6,6 +6,22 @@
   <title>Lisbonne</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+   <!-- Firebase -->
+   <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
+   <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-firestore.js"></script>
+   <script>
+      const firebaseConfig = {
+      apiKey: "AIzaSyBhb-gYuXWKOnCuN_z4FEt17SkW_nOPqao",
+      authDomain: "challenge-c426a.firebaseapp.com",
+      projectId: "challenge-c426a",
+      storageBucket: "challenge-c426a.appspot.com",
+      messagingSenderId: "428726302902",
+      appId: "1:428726302902:web:772e20c8915a593c2c0e17"
+    };
+     // Initialize Firebase
+    const app = firebase.initializeApp(firebaseConfig);
+  </script>
+  <script src="depenses.js"></script>
 </head>
 <body>
 <header>
@@ -50,6 +66,19 @@
     <li><a href="lisbonne-challenge3.html">Challenge 3</a></li>
   </ul>
 </main>
+  <div class="sidebar">
+    <h2>Compteur de dépenses</h2>
+    <p>Somme initiale : <span id="initialAmount">400</span> €</p>
+    <p>Somme restante : <span id="remainingAmount">400</span> €</p>
+
+    <h3>Ajouter un élément</h3>
+    <input type="text" id="itemName" placeholder="Nom de l'élément">
+    <input type="number" id="itemPrice" placeholder="Prix">
+    <button id="addItemButton">Ajouter</button>
+
+    <h3>Dépenses</h3>
+    <ul id="itemList"></ul>
+  </div>
 <footer>
     <p>&copy; 2023 Explorer l'inconnu : voyages, rencontres, aventures. Tous droits réservés.</p>
   </footer>
