--- a/stockholm.html
+++ b/stockholm.html
@@ -49,16 +49,10 @@
 </header>
 
   <main>
-      <div class="content-wrapper"  style="position: relative;">
-        <div id="timer" class="timer">
-    <div id="jours" class="countdown-number"></div>
-    <div id="heures" class="countdown-number"></div>
-    <div id="minutes" class="countdown-number"></div>
-    <div id="secondes" class="countdown-number"></div>
-</div>
+      
 
         <img class="stockholm-image" src="https://res.klook.com/image/upload/cities/l60kj5nj2xedqjnf0tkf.jpg" alt="Une photo de Stockholm" />
-        <p class="poetic-text">Découvrez les merveilles de Stockholm avant que le temps ne s'échappe...</p>
+        <p class="poetic-text">Plongez au cœur de Stockholm, un mélange unique d'aventures inoubliables, de rencontres chaleureuses et de découvertes étonnantes.</p>
     </div>
     <script src="timer.js"></script>
   <a href="Stockholm/F5e%23nZ1vC/Stockholm - Destination.pdf" target="_blank">
