--- a/stockholm.html
+++ b/stockholm.html
@@ -51,8 +51,8 @@
   <main>
       
 
-        <img class="stockholm-image" src="https://res.klook.com/image/upload/cities/l60kj5nj2xedqjnf0tkf.jpg" alt="Une photo de Stockholm" />
-        <p class="poetic-text">Plongez au cœur de Stockholm, un mélange unique d'aventures inoubliables, de rencontres chaleureuses et de découvertes étonnantes.</p>
+        <img class="stockholm-image" src="https://res.klook.com/image/upload/cities/l60kj5nj2xedqjnf0tkf.jpg" alt="Une photo de Stockholm" /> </br>
+        <p class="poetic-text">Plongez au cœur de Stockholm, un mélange unique d'aventures inoubliables, de rencontres chaleureuses et de découvertes étonnantes.</p> </br>
     </div>
     <script src="timer.js"></script>
   <a href="Stockholm/F5e%23nZ1vC/Stockholm - Destination.pdf" target="_blank">
