--- a/stockholm.html
+++ b/stockholm.html
@@ -50,7 +50,9 @@
 
   <main>
     <div>
-       <img class="stockholm-image" src="https://res.klook.com/image/upload/cities/l60kj5nj2xedqjnf0tkf.jpg" alt="Une photo de Stockholm" /> </br>
+       <img class="stockholm-image" src="https://res.klook.com/image/upload/cities/l60kj5nj2xedqjnf0tkf.jpg" alt="Une photo de Stockholm" /> 
+      </div>
+    <div>
         <p class="poetic-text">Plongez au cœur de Stockholm, un mélange unique d'aventures inoubliables, de rencontres chaleureuses et de découvertes étonnantes.</p> </br>
     </div>
     <script src="timer.js"></script>
