--- a/stockholm.html
+++ b/stockholm.html
@@ -53,7 +53,8 @@
        <img class="stockholm-image" src="https://res.klook.com/image/upload/cities/l60kj5nj2xedqjnf0tkf.jpg" alt="Une photo de Stockholm" /> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/>
       </div>
     <div>
-        <p class="poetic-text">Plongez au cœur de Stockholm, un mélange unique d'aventures inoubliables, de rencontres chaleureuses et de découvertes étonnantes.</p> </br>
+        <p class="poetic-text">Plongez au cœur de Stockholm, un mélange unique d'aventures inoubliables,</p> 
+    <p class="poetic-text">de rencontres chaleureuses et de découvertes étonnantes.</p></br>
     </div>
     <script src="timer.js"></script>
   <a href="Stockholm/F5e%23nZ1vC/Stockholm - Destination.pdf" target="_blank">
