--- a/stockholm.html
+++ b/stockholm.html
@@ -49,6 +49,7 @@
 </header>
 
   <main>
+    <div class="main-content">
     <div>
        <img class="stockholm-image" src="https://res.klook.com/image/upload/cities/l60kj5nj2xedqjnf0tkf.jpg" alt="Une photo de Stockholm" /> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/>
       </div>
