--- a/stockholm.html
+++ b/stockholm.html
@@ -49,7 +49,8 @@
 </header>
 
   <main>
-    <div class="main-content">
+    <div class="container1">
+    <div class="box1">
     <div>
        <img class="stockholm-image" src="https://res.klook.com/image/upload/cities/l60kj5nj2xedqjnf0tkf.jpg" alt="Une photo de Stockholm" /> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/>
       </div>
@@ -74,9 +75,10 @@
   Stockholm - Aide.pdf
   </a>
   </div>
-  
-    <div class="main-content">
-<div class="separator"></div>
+    </div>
+
+  <div class="separator"></div>
+   <div class="box1">
    <div class="photo-text-container">
    <div class="photo-text left">
         <img src="https://assistance.leboncoin.info/hc/article_attachments/360003680859/ajouter_des_photos.PNG" alt="Description de la photo 1">
@@ -118,6 +120,7 @@
         <img src="https://assistance.leboncoin.info/hc/article_attachments/360003680859/ajouter_des_photos.PNG" alt="Description de la photo 10">
         <p>Description de la photo 10</p>
       </div>  
+  </div>
   </div>
   </div>
 </main>
