--- a/stockholm.html
+++ b/stockholm.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title><a href="https://bertrand9999.github.io/Challenges">Explorer l'inconnu : voyages, rencontres, aventures</a></title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles-stockholm.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
    <!-- Firebase -->
    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
@@ -49,71 +49,42 @@
 </header>
 
   <main>
+  <div class="left-container">
+    <img class="stockholm-image" src="https://res.klook.com/image/upload/cities/l60kj5nj2xedqjnf0tkf.jpg" alt="Une photo de Stockholm" /> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> 
+    <p class="poetic-text">Plongez au cœur de Stockholm, un mélange unique d'aventures inoubliables, de rencontres chaleureuses et de découvertes étonnantes.</p></br>
     <div>
-       <img class="stockholm-image" src="https://res.klook.com/image/upload/cities/l60kj5nj2xedqjnf0tkf.jpg" alt="Une photo de Stockholm" /> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/> <br/>
-      </div>
-    <div>
-        <p class="poetic-text">Plongez au cœur de Stockholm, un mélange unique d'aventures inoubliables, de rencontres chaleureuses et de découvertes étonnantes.</p></br>
+      <a href="Stockholm/F5e%23nZ1vC/Stockholm - Destination.pdf" target="_blank">
+      <img src="https://th.bing.com/th/id/R.3287019bd55c39add8fe2c5fb6f09ff7?rik=zaCU%2bEWMef6Jhg&riu=http%3a%2f%2fmatchomatics.com%2fimages%2fadobe-pdf-file-icon-logo-vector.png&ehk=Ucbfb%2byLQXfGg3Hvblr2JPeM5%2filt2xFQi6WnjLu8Vw%3d&risl=&pid=ImgRaw&r=0" alt="Logo PDF" style="width: 30px; height: auto;">
+      Stockholm - Destination.pdf
+      </a> <br>
     </div>
-  <a href="Stockholm/F5e%23nZ1vC/Stockholm - Destination.pdf" target="_blank">
-  <img src="https://th.bing.com/th/id/R.3287019bd55c39add8fe2c5fb6f09ff7?rik=zaCU%2bEWMef6Jhg&riu=http%3a%2f%2fmatchomatics.com%2fimages%2fadobe-pdf-file-icon-logo-vector.png&ehk=Ucbfb%2byLQXfGg3Hvblr2JPeM5%2filt2xFQi6WnjLu8Vw%3d&risl=&pid=ImgRaw&r=0" alt="Logo PDF" style="width: 30px; height: auto;">
-  Stockholm - Destination.pdf
-  </a> <br>
-  </div>
     <div>
-  <a href="Stockholm/Q9x!uP6fJ/Stockholm - Défis.pdf" target="_blank">
-  <img src="https://th.bing.com/th/id/R.3287019bd55c39add8fe2c5fb6f09ff7?rik=zaCU%2bEWMef6Jhg&riu=http%3a%2f%2fmatchomatics.com%2fimages%2fadobe-pdf-file-icon-logo-vector.png&ehk=Ucbfb%2byLQXfGg3Hvblr2JPeM5%2filt2xFQi6WnjLu8Vw%3d&risl=&pid=ImgRaw&r=0" alt="Logo PDF" style="width: 30px; height: auto;">
-  Stockholm - Défis.pdf
-  </a> <br>
-  </div>
+      <a href="Stockholm/Q9x!uP6fJ/Stockholm - Défis.pdf" target="_blank">
+      <img src="https://th.bing.com/th/id/R.3287019bd55c39add8fe2c5fb6f09ff7?rik=zaCU%2bEWMef6Jhg&riu=http%3a%2f%2fmatchomatics.com%2fimages%2fadobe-pdf-file-icon-logo-vector.png&ehk=Ucbfb%2byLQXfGg3Hvblr2JPeM5%2filt2xFQi6WnjLu8Vw%3d&risl=&pid=ImgRaw&r=0" alt="Logo PDF" style="width: 30px; height: auto;">
+      Stockholm - Défis.pdf
+      </a> <br>
+    </div>
     <div>
-  <a href="Stockholm/T2w%40yG7bR/Stockholm - Aide.pdf" target="_blank">
-  <img src="https://th.bing.com/th/id/R.3287019bd55c39add8fe2c5fb6f09ff7?rik=zaCU%2bEWMef6Jhg&riu=http%3a%2f%2fmatchomatics.com%2fimages%2fadobe-pdf-file-icon-logo-vector.png&ehk=Ucbfb%2byLQXfGg3Hvblr2JPeM5%2filt2xFQi6WnjLu8Vw%3d&risl=&pid=ImgRaw&r=0" alt="Logo PDF" style="width: 30px; height: auto;">
-  Stockholm - Aide.pdf
-  </a>
+      <a href="Stockholm/T2w%40yG7bR/Stockholm - Aide.pdf" target="_blank">
+      <img src="https://th.bing.com/th/id/R.3287019bd55c39add8fe2c5fb6f09ff7?rik=zaCU%2bEWMef6Jhg&riu=http%3a%2f%2fmatchomatics.com%2fimages%2fadobe-pdf-file-icon-logo-vector.png&ehk=Ucbfb%2byLQXfGg3Hvblr2JPeM5%2filt2xFQi6WnjLu8Vw%3d&risl=&pid=ImgRaw&r=0" alt="Logo PDF" style="width: 30px; height: auto;">
+      Stockholm - Aide.pdf
+      </a>
+    </div>
   </div>
+
   <div class="separator"></div>
-   <div class="photo-text-container">
-   <div class="photo-text left">
-        <img src="https://assistance.leboncoin.info/hc/article_attachments/360003680859/ajouter_des_photos.PNG" alt="Description de la photo 1">
-        <p>Description de la photo 1</p>
+
+  <div class="right-container">
+    <div class="photo-text-container">
+      <div class="photo-text left">
+          <img src="https://assistance.leboncoin.info/hc/article_attachments/360003680859/ajouter_des_photos.PNG" alt="Description de la photo 1">
+          <p>Description de la photo 1</p>
       </div>
       <div class="photo-text right">
-        <img src="https://assistance.leboncoin.info/hc/article_attachments/360003680859/ajouter_des_photos.PNG" alt="Description de la photo 2">
-        <p>Description de la photo 2</p>
+          <img src="https://assistance.leboncoin.info/hc/article_attachments/360003680859/ajouter_des_photos.PNG" alt="Description de la photo 2">
+          <p>Description de la photo 2</p>
       </div>
-  <div class="photo-text left">
-        <img src="https://assistance.leboncoin.info/hc/article_attachments/360003680859/ajouter_des_photos.PNG" alt="Description de la photo 3">
-        <p>Description de la photo 3</p>
-      </div>
-      <div class="photo-text right">
-        <img src="https://assistance.leboncoin.info/hc/article_attachments/360003680859/ajouter_des_photos.PNG" alt="Description de la photo 4">
-        <p>Description de la photo 4</p>
-      </div>
-  <div class="photo-text left">
-        <img src="https://assistance.leboncoin.info/hc/article_attachments/360003680859/ajouter_des_photos.PNG" alt="Description de la photo 5">
-        <p>Description de la photo 5</p>
-      </div>
-      <div class="photo-text right">
-        <img src="https://assistance.leboncoin.info/hc/article_attachments/360003680859/ajouter_des_photos.PNG" alt="Description de la photo 6">
-        <p>Description de la photo 6</p>
-      </div>
-  <div class="photo-text left">
-        <img src="https://assistance.leboncoin.info/hc/article_attachments/360003680859/ajouter_des_photos.PNG" alt="Description de la photo 7">
-        <p>Description de la photo 7</p>
-      </div>
-      <div class="photo-text right">
-        <img src="https://assistance.leboncoin.info/hc/article_attachments/360003680859/ajouter_des_photos.PNG" alt="Description de la photo 8">
-        <p>Description de la photo 8</p>
-      </div>
-  <div class="photo-text left">
-        <img src="https://assistance.leboncoin.info/hc/article_attachments/360003680859/ajouter_des_photos.PNG" alt="Description de la photo 9">
-        <p>Description de la photo 9</p>
-      </div>
-      <div class="photo-text right">
-        <img src="https://assistance.leboncoin.info/hc/article_attachments/360003680859/ajouter_des_photos.PNG" alt="Description de la photo 10">
-        <p>Description de la photo 10</p>
-      </div>  
+    </div>
   </div>
 </main>
   
