--- a/stockholm.html
+++ b/stockholm.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title><a href="https://bertrand9999.github.io/Challenges">Explorer l'inconnu : voyages, rencontres, aventures</a></title>
-  <link rel="stylesheet" href="styles-stockholm.css">
+  <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
    <!-- Firebase -->
    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
