--- a/stockholm.html
+++ b/stockholm.html
@@ -75,7 +75,7 @@
   <div class="separator"></div>
 
   <div class="right-container">
-    <div class="photo-text-container">
+    <div class="photo-text-container ">
       <div class="photo-text left">
           <img src="https://assistance.leboncoin.info/hc/article_attachments/360003680859/ajouter_des_photos.PNG" alt="Description de la photo 1">
           <p>Description de la photo 1</p>
@@ -84,8 +84,33 @@
           <img src="https://assistance.leboncoin.info/hc/article_attachments/360003680859/ajouter_des_photos.PNG" alt="Description de la photo 2">
           <p>Description de la photo 2</p>
       </div>
+      <div class="photo-text left">
+        <img src="https://assistance.leboncoin.info/hc/article_attachments/360003680859/ajouter_des_photos.PNG" alt="Description de la photo 1">
+        <p>Description de la photo 1</p>
     </div>
+    <div class="photo-text right">
+        <img src="https://assistance.leboncoin.info/hc/article_attachments/360003680859/ajouter_des_photos.PNG" alt="Description de la photo 2">
+        <p>Description de la photo 2</p>
+    </div>
+    <div class="photo-text left">
+      <img src="https://assistance.leboncoin.info/hc/article_attachments/360003680859/ajouter_des_photos.PNG" alt="Description de la photo 1">
+      <p>Description de la photo 1</p>
   </div>
+  <div class="photo-text right">
+      <img src="https://assistance.leboncoin.info/hc/article_attachments/360003680859/ajouter_des_photos.PNG" alt="Description de la photo 2">
+      <p>Description de la photo 2</p>
+  </div>
+  <div class="photo-text left">
+    <img src="https://assistance.leboncoin.info/hc/article_attachments/360003680859/ajouter_des_photos.PNG" alt="Description de la photo 1">
+    <p>Description de la photo 1</p>
+</div>
+<div class="photo-text right">
+    <img src="https://assistance.leboncoin.info/hc/article_attachments/360003680859/ajouter_des_photos.PNG" alt="Description de la photo 2">
+    <p>Description de la photo 2</p>
+</div>
+  </div>
+
+</div>
 </main>
   
 <div class="sidebar">
